<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:minWidth="360dp"
              android:padding="24dp"
              android:background="@color/white">

    <ImageView android:id="@+id/dialog_team_logo"
                android:layout_width="128dp"
               android:layout_height="128dp"
               android:layout_gravity="center"
               android:contentDescription="@null"
               android:src="@drawable/paredes_logo"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/team_logo_input"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/team_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_competition_input"
            app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/team_logo_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/team_name_input"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/team_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_competition_input"
            app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/team_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/team_acronym_input"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/team_acronym"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_competition_input"
            app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/team_acronym_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/create_team_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/create_btn"
            android:textColor="@color/white"
            android:textAlignment="center" />

</LinearLayout>