<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewmodel"
            type="com.endeavour.poloaquaticoparedes.ui.event.EventViewModel"/>
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="@dimen/max_width"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:text="@string/create_event_info_title" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/event_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:hint="@string/name_hint"
                        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/event_name_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1"
                            app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/event_location_input"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:hint="@string/event_location_hint"
                        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/event_location_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPostalAddress"
                            android:maxLines="2"
                            app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.savvyapps.togglebuttonlayout.ToggleButtonLayout
                            android:id="@+id/event_target_young_leagues_toggle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            app:multipleSelection="true"
                            app:menu="@menu/young_leagues_menu" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.savvyapps.togglebuttonlayout.ToggleButtonLayout
                                android:id="@+id/event_target_older_leagues_toggle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                app:multipleSelection="true"
                                app:menu="@menu/older_leagues_menu" />

                        <com.savvyapps.togglebuttonlayout.ToggleButtonLayout
                                android:id="@+id/event_target_sex_toggle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                app:multipleSelection="false"
                                app:menu="@menu/sex_menu" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/event_priority"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/event_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="8dp"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:drawableEnd="@drawable/ic_calendar"/>

                        <TextView
                            android:id="@+id/event_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="8dp"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:drawableEnd="@drawable/ic_clock"/>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="@dimen/max_width"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:text="@string/create_event_content_title" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/event_image_input"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:hint="@string/image_hint"
                        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/event_image_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textUri"
                            android:maxLines="1"
                            app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/event_content_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/content_hint"
                        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/event_content_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/create_event_btn"
                android:layout_width="@dimen/max_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/create_btn"
                android:textColor="@color/white"
                android:textAlignment="center" />

            <Button
                android:id="@+id/delete_event_btn"
                android:layout_width="@dimen/max_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="48dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:backgroundTint="@color/white"
                android:text="@string/delete"
                android:textColor="@color/colorAccent"
                android:visibility="gone"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>