<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       android:layout_width="match_parent"
                                       android:layout_height="match_parent"
                                       android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="32dp">

        <ImageView
                android:id="@+id/login_logo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:src="@drawable/paredes_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_email_login"
                android:layout_width="@dimen/max_width"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/login_email_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintBottom_toTopOf="@id/user_id_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_logo"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_email_login_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_id_login"
                android:layout_width="@dimen/max_width"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/login_card_id_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_email_login"
                app:layout_constraintBottom_toTopOf="@id/login_btn">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_id_login_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLines="1"
                    app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="@dimen/max_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:padding="16dp"
                android:text="@string/login_btn"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="@color/white"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_id_login"/>

        <TextView android:id="@+id/public_login_btn"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_margin="8dp"
                  android:padding="8dp"
                  android:text="@string/public_login"
                  android:textColor="@color/colorPrimaryDark"
                  app:layout_constraintTop_toBottomOf="@+id/login_btn"
                  app:layout_constraintEnd_toEndOf="@+id/login_btn"
                  app:layout_constraintStart_toStartOf="@+id/login_btn"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>